# multithreading

./: Makefile.am  autogen.sh  configure.ac
src/: Makefile.am  ncpu.c  sleep.c  thread.h
test/: Makefile.am  testmutex.c  testncpu.c
